welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:29: error: identifier expected but 'override' found.
def override run() {
    ^